--- a/www/css/index.css
+++ b/www/css/index.css
@@ -3,11 +3,11 @@
 }
 
 body {
-  font-family: "PT Sans", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: none;
   -webkit-user-select: none;
-  font-size: 12px;
+  font-size: 16px;
   height: 100%;
   margin: 0px;
   padding: 0px;
@@ -16,16 +16,43 @@ body {
   color: #ffffff;
 }
 
+#demo-list a:focus {
+  color: #ff1744;
+  text-decoration: none;
+}
+
+/* 
+ * CSS for fine-tuning Radiant Media Player TV skin 
+ */
 .rmp-button.rmp-button-hover {
   color: #ff1744;
 }
 
-.rmp-tv-player.rmp-live .rmp-i-quick-forward-tv,
-.rmp-tv-player.rmp-live .rmp-i-quick-rewind-tv {
-  display: none;
+.rmp-i:hover {
+  color: inherit;
 }
 
-.rmp-tv-player .rmp-title,
-.rmp-tv-player .rmp-description {
-  max-width: 50%;
+.rmp-overlay-level.rmp-button-hover,
+.rmp-ad-container-skip.rmp-button-hover {
+  border: 2px solid #ff1744;
+}
+
+/* 
+ * When a module is open or an ad is displayed: keep the control bar visible to 
+ * allow remote control navigation on control bar buttons 
+ * also hide the play/pause button on top right corner
+ */
+.rmp-tv.rmp-module-open-ui .rmp-control-bar,
+.rmp-tv.rmp-linear-ad-ui .rmp-control-bar {
+  display: block !important;
+  opacity: 1 !important;
+  visibility: visible !important;
+}
+
+.rmp-tv.rmp-module-open-ui .rmp-handle {
+  z-index: auto;
+}
+
+.rmp-tv .rmp-module-overlay-icons.rmp-module-overlay-play-pause {
+  display: none !important;
 }
